--- a/package.json
+++ b/package.json
@@ -12,16 +12,31 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.4.6",
+    "@angular/cdk": "^2.0.0-beta.12",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
+    "@angular/material": "^2.0.0-beta.12",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^4.1.0",
+    "@ngrx/router-store": "^4.1.0",
+    "@ngrx/store": "^4.1.0",
+    "@ngrx/store-devtools": "^4.0.0",
+    "@swimlane/ngx-charts": "^6.1.0",
+    "@swimlane/ngx-datatable": "^10.3.0",
+    "angularfire2": "^5.0.0-rc.3",
     "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
+    "d3": "^4.11.0",
+    "firebase": "^4.6.0",
+    "flexboxgrid": "^6.3.1",
+    "hammerjs": "^2.0.8",
+    "rxjs": "^5.4.3",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -41,6 +56,6 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "typescript": "~2.4.2"
   }
 }
